--- a/application/views/pages/submit.twig
+++ b/application/views/pages/submit.twig
@@ -1,7 +1,8 @@
 {#
- # Sharif Judge
+ # Saltfish Judge
  # file: submit.twig
- # author: Mohammad Javad Naderi <mjnaderi@gmail.com>
+ # original author: Mohammad Javad Naderi <mjnaderi@gmail.com>
+ # modified: @bumfo
  #}
 {% set selected = 'submit' %}
 {% extends 'templates/base.twig' %}
